refactor measurement handling to allow for heterogenous periods and fix issues related to it